# ez-gdal

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/actions/setup-msvc/: action.yml
.github/workflows/: ci.yml  release.yml  win-sdk-poc.yml
docs/: external-plugin-support.md  plugin-authoring.md  release.md  win-plugin-poc.md
licenses/: README.md
licenses/notices/: README.md
scripts/: pack-tool.sh  publish-all.sh
scripts/completions/: README.md  ezgdal.bash  ezgdal.fish  ezgdal.ps1  ezgdal.zsh
scripts/completions/data/: usage-en.json  usage-ja.json
scripts/completions/tools/: common.py  compile.py  extract.sh  pyproject.toml  translate-diff.py
scripts/win-sdk/: README.md  fetch-gdal-headers.ps1  gen-import-lib.ps1  generate-sdk.ps1
scripts/win-sdk/templates/: EzGdalSdk.cmake.in
src/EzGdal/: Bootstrap.cs  EzGdal.csproj  Program.cs
src/EzGdal/Applets/: AppletRegistry.cs  CompletionApplet.cs  GdalBuildVrtApplet.cs  GdalContourApplet.cs  GdalDemApplet.cs  GdalFootprintApplet.cs  GdalGridApplet.cs  GdalInfoApplet.cs  GdalMdimTranslateApplet.cs  GdalRasterizeApplet.cs  GdalTranslateApplet.cs  GdalWarpApplet.cs  GdaladdoApplet.cs  InstallAppletsApplet.cs  InstallPluginApplet.cs  ListPluginsApplet.cs  NearblackApplet.cs  Ogr2OgrApplet.cs  OgrInfoApplet.cs  RemovePluginApplet.cs  UnifiedCliApplet.cs
src/EzGdal/Util/: ArgParser.cs  ExitCode.cs  GdalCli.cs  GdalHelper.cs  NativeExecutablePath.cs  PluginPaths.cs
verify/DriverProbe/: DriverProbe.csproj  Program.cs
verify/DummyPlugin/: CMakeLists.txt  README.md  ogrdummy.cpp
